update JVM target to 22; enable native access for tests on newer JDKs